--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>BloggerTutorial</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+    <head>
+        <title>BloggerTutorial</title>
+        <%= csrf_meta_tags %>
+        <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+        <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+        <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    </head>
 
-  <body>
-    <p class="flash"><%= flash.notice %></p>
-    <%= yield %>
-  </body>
+    <body>
+        <p class="flash"><%= flash.notice %></p>
+        <%= yield %>
+        <hr>
+        <h6>
+            <% if logged_in? %>
+                <%= "Logged in as #{current_user.email}" %>
+                <%= link_to "(logout)", logout_path %>
+            <% else %>
+                <%= link_to "(login)", login_path %>
+            <% end %>
+        </h6>
+    </body>
 </html>
